# db_multiagent_system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TASK.md  TODO.md  demo.py  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
.agents/skills/caveman-compress/scripts/: compress.py  detect.py
.agents/skills/evaluate-task-md/: SKILL.md
.github/: copilot-instructions.md
db/: restore-dvdrental.sh
specs/: 01-bootstrap.md  02-tools-mcp.md  03-graph-shell.md  04-schema-gate.md  05-schema-agent-hitl.md  06-query-agent-critic.md  07-memory.md  08-litellm.md  09-observability.md  10-streamlit.md  11-pydantic-state-and-history.md
src/agents/: __init__.py  query_agent.py  schema_agent.py
src/agents/prompts/: __init__.py  guardrail.py  preferences.py  query.py  schema.py
src/agents/schemas/: __init__.py  guardrail_outputs.py  preferences_outputs.py  query_outputs.py  schema_outputs.py
src/config/: __init__.py  langsmith_settings.py  llm_settings.py  mcp_settings.py  memory_settings.py  postgres_settings.py  settings.py
src/db_multiagent_system/: bootstrap.py  graph_demo.py  mcp_demo.py  memory_demo.py  schema_export.py
src/graph/: __init__.py  graph.py  invoke_v2.py  mcp_helpers.py  memory_nodes.py  nodes.py  presence.py  query_pipeline.py  schema_paths.py  schema_pipeline.py  state.py
src/graph/nodes/query_nodes/: __init__.py  guardrail.py  off_topic.py  persist_prefs.py  preferences_hitl.py  preferences_infer.py  preferences_persist.py  query_critic.py  query_enforce_limit.py  query_execute.py  query_explain.py  query_generate_sql.py  query_load_context.py  query_plan.py  query_refine_cap.py
src/graph/nodes/schema_nodes/: __init__.py  schema_draft.py  schema_hitl.py  schema_inspect.py  schema_persist.py
src/llm/: __init__.py  factory.py
src/mcp_server/: __init__.py  __main__.py  main.py  readonly_sql.py  schema_metadata.py  tools.py
src/memory/: __init__.py  db.py  preferences.py  schema_docs.py  session.py
src/ui/: __init__.py  app.py  formatters.py
src/utils/: postgres.py
tests/: __init__.py  conftest.py  schema_presence_stubs.py  test_agents_schemas.py  test_bootstrap_smoke.py  test_graph_invoke_v2.py  test_graph_mcp_integration.py  test_graph_shell.py  test_litellm_factory.py  test_litellm_integration.py  test_mcp_db_integration.py  test_mcp_readonly_unit.py  test_mcp_streamable_http_client.py  test_memory_unit.py  test_observability.py  test_query_pipeline.py  test_schema_gate.py  test_schema_hitl.py  test_ui_formatters.py
tests/agents/: test_query_agent_history.py
tests/feature/: test_preferences_flow.py  test_query_pipeline.py  test_schema_pipeline.py
tests/graph/: test_state_reducers.py  test_two_turn_refinement.py
tests/integration/: test_integration_mcp.py
tests/memory/: test_session.py
tests/unit/: test_critic_strictness.py  test_enforce_limit.py  test_explain_preferences.py  test_formatters.py  test_guardrail.py  test_llm_factory.py  test_memory.py  test_observability.py  test_off_topic.py  test_persist_prefs.py  test_planner_folds_prefs.py  test_preferences_agent.py  test_preferences_nodes.py  test_query_agent.py  test_route_after_execute.py  test_schemas.py  test_sql_safety.py
